added favorite game

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Hello, World!</h1>
     <div>My name is Sara</div>
     <div>My favorite hobby is doodleing</div>
+    <div>My favorite game Legend of Zelda</div>
 </body>
 </html>
